[package]
name = "blackmarlin-isolate"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
cozy-chess = "0.3.1"
arrayvec = "0.7.1"
cfg-if = "1.0.0"
mcts = "0.3.0"
willowtree = "0.2.0"
indextree = "4.7.2"
rand = "0.8.5"
vampirc-uci = "0.11.1"
